# ondevice-landmark-assistant

./: .gitignore  README.ko.md  README.md
code/: CONTRIBUTIONS.md  README.md  SOURCES.md
code/model_integration/: ANDROID_INTEGRATION.md  README.md
code/model_integration/contracts/: manifest.example.json
code/model_integration/patches/: 2e4349b-android-asset-cache-fix.patch
code/model_integration/tests/: test_contract_metadata.py
code/sprint1_prototype/: README.md  config.int8.toml  config.onnx.toml  config.toml  pyproject.toml  run.py
code/sprint1_prototype/src/landmark_demo/: app.py  config.py  data.py  inference.py  logging_util.py  model.py  search.py
code/sprint1_prototype/tests/: test_search_policy.py
code/sprint1_prototype/tests/fixtures/: demo_regression_v1.json
code/training/: README.md  requirements.txt
code/training/configs/main_matrix/: SOURCE_MAP.json  mobileclip2_s3_full_ce.json  mobileclip2_s3_lora_ce.json  mobileclip2_s3_partial_arcface.json  mobileclip2_s3_partial_ce.json  mobileclip2_s4_full_ce.json  mobileclip2_s4_lora_ce.json  mobileclip2_s4_partial_arcface.json  (+1 more)
code/training/scripts/: export_mobile_onnx.py  mine_hard_negative_candidates.py  validate_mobile_artifacts.py
data/: metrics.json
docs/superpowers/plans/: 2026-06-20-bilingual-readme.md  2026-06-20-ondevice-landmark-assistant-readme.md
docs/superpowers/specs/: 2026-06-20-bilingual-readme-design.md  2026-06-20-ondevice-landmark-assistant-portfolio-design.md
scripts/: generate_visuals.py
tests/: test_portfolio_assets.py  test_public_code_snapshot.py
(+8 files in other folders)
